--- a/README
+++ b/README
@@ -1,12 +1,12 @@
 Gurm License
 version 1.0
 
-Gurm Studios, Inc. and subsidiaries
+Gurm Studios and subsidiaries
 No changes are permitted to this document.
 
 
-1. This license is for Gurm Studios, Inc. and shall not be used by organizations or individuals other than subsidiaries.
+1. This license is for Gurm Studios and shall not be used by organizations or individuals other than subsidiaries.
 
-2. The work under this License is owned by Gurm Studios, Inc. shall not be used for commercial purposes by organizations or individuals other than subsidiaries.
+2. The work under this License is owned by Gurm Studios shall not be used for commercial purposes by organizations or individuals other than subsidiaries.
 
 3. If you use a work to which this license is applied, be sure to indicate the source.
