--- a/README
+++ b/README
@@ -1,12 +1,11 @@
 Gurm License
-version 1.0
+Version 2.0
 
-Gurm Studios and subsidiaries
+Gurm Studios and its subsidiaries
 No changes are permitted to this document.
 
+1. This license can be used by organizations or individuals other than Gurm Studios and its subsidiaries.
 
-1. This license is for Gurm Studios and shall not be used by organizations or individuals other than subsidiaries.
+2. Works to which this license has been applied may not be used for commercial purposes by organizations or individuals other than Gurm Studios and its subsidiaries.
 
-2. The work under this License is owned by Gurm Studios shall not be used for commercial purposes by organizations or individuals other than subsidiaries.
-
-3. If you use a work to which this license is applied, be sure to indicate the source.
+3. If you use a work to which this license applies, be sure to cite the source inside the program.
